// Vitest Snapshot v1

exports[`ColorPicker > ColorPicker colorModeVue demo works fine 1`] = `
<t-space
  data-v-b3486e9a=""
  direction="vertical"
  size="32px"
>
  <t-space
    data-v-b3486e9a=""
    size="36px"
  >
    <t-space
      class="item"
      data-v-b3486e9a=""
      direction="vertical"
      size="10px"
    >
      <h5
        data-v-b3486e9a=""
      >
        默认（单色 + 线性渐变）
      </h5>
      <t-color-picker
        data-v-b3486e9a=""
        format="CSS"
      />
    </t-space>
    <t-space
      class="item"
      data-v-b3486e9a=""
      direction="vertical"
      size="10px"
    >
      <h5
        data-v-b3486e9a=""
      >
        仅单色模式
      </h5>
      <t-color-picker
        color-modes="monochrome"
        data-v-b3486e9a=""
        format="CSS"
      />
    </t-space>
  </t-space>
  <t-space
    class="item"
    data-v-b3486e9a=""
    direction="vertical"
    size="10px"
  >
    <h5
      data-v-b3486e9a=""
    >
      仅线性渐变模式
    </h5>
    <t-color-picker
      color-modes="linear-gradient"
      data-v-b3486e9a=""
      format="CSS"
    />
  </t-space>
</t-space>
`;

exports[`ColorPicker > ColorPicker enableAlphaVue demo works fine 1`] = `
<t-color-picker-panel
  enable-alpha="true"
  format="RGBA"
/>
`;

exports[`ColorPicker > ColorPicker panelVue demo works fine 1`] = `<t-color-picker-panel />`;

exports[`ColorPicker > ColorPicker recentColorVue demo works fine 1`] = `
<t-space>
  <t-space
    direction="vertical"
    size="10px"
  >
    <h6>
      预设最近使用色
    </h6>
    <t-color-picker-panel
      recent-colors="red,green,yellow,blue,purple,linear-gradient(to right, #fa709a 0%, #fee140 100%),linear-gradient(45deg, #eea2a2 0%, #bbc1bf 19%, #57c6e1 42%, #b49fda 79%, #7ac5d8 100%),linear-gradient(120deg, #fcc5e4 0%, #fda34b 15%, #ff7882 35%, #c8699e 52%, #7046aa 71%, #0c1db8 87%, #020f75 100%)"
    />
  </t-space>
  <t-space
    direction="vertical"
    size="10px"
  >
    <h6>
      完全不显示最近使用色
    </h6>
    <t-color-picker-panel />
  </t-space>
</t-space>
`;

exports[`ColorPicker > ColorPicker statusDisabledVue demo works fine 1`] = `
<t-color-picker
  disabled=""
/>
`;

exports[`ColorPicker > ColorPicker statusReadonlyVue demo works fine 1`] = `
<t-color-picker-panel
  disabled=""
/>
`;

exports[`ColorPicker > ColorPicker swatchColorVue demo works fine 1`] = `
<t-space>
  <t-space
    direction="vertical"
    size="10px"
  >
    <h6>
      自定义系统色
    </h6>
    <t-color-picker-panel
      swatch-colors="red,green,yellow,blue,purple"
    />
  </t-space>
  <t-space
    direction="vertical"
    size="10px"
  >
    <h6>
      完全不显示系统色
    </h6>
    <t-color-picker-panel />
  </t-space>
</t-space>
`;

exports[`ColorPicker > ColorPicker triggerVue demo works fine 1`] = `<t-color-picker />`;
